[gd_scene load_steps=10 format=3 uid="uid://cgyfby7iyicvk"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_fg42v"]
[ext_resource type="FontFile" uid="uid://6pl6qtoo2p2x" path="res://fonts/Xolonium-Regular.ttf" id="1_g587x"]
[ext_resource type="Texture2D" uid="uid://3b6c7akftt7v" path="res://art/icons8-play-50.png" id="2_4w35k"]
[ext_resource type="Texture2D" uid="uid://5ux2vsqukf5a" path="res://art/icons8-restart.svg" id="2_hmcxn"]
[ext_resource type="Theme" uid="uid://d2vfdeuycvrrh" path="res://themes/container_theme.tres" id="5_hgc8d"]
[ext_resource type="Theme" uid="uid://e0ko5wbqflma" path="res://themes/title_theme.tres" id="6_6wor8"]
[ext_resource type="Theme" uid="uid://0mcaptcoklj2" path="res://themes/subtitle_theme.tres" id="7_loib7"]

[sub_resource type="InputEventKey" id="InputEventKey_bgphi"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_ut48a"]
events = [SubResource("InputEventKey_bgphi")]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fg42v")

[node name="ResumeButton" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 164.0
offset_top = 118.0
offset_right = 222.0
offset_bottom = 176.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_g587x")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_ut48a")
icon = ExtResource("2_4w35k")

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 118.0
offset_right = 43.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_g587x")
theme_override_font_sizes/font_size = 64
icon = ExtResource("2_hmcxn")

[node name="OptionsButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -140.0
offset_right = 134.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_g587x")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="OptionsMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -78.5
offset_right = 130.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_hgc8d")

[node name="OptionsLabel" type="Label" parent="OptionsMenu"]
layout_mode = 2
theme = ExtResource("6_6wor8")
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="OptionsMenu"]
layout_mode = 2
theme = ExtResource("7_loib7")
text = "Volume
"

[node name="VolumeSlider" type="HSlider" parent="OptionsMenu"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="ButtonContainer" type="HBoxContainer" parent="OptionsMenu"]
layout_mode = 2
theme = ExtResource("5_hgc8d")

[node name="CancelButton" type="Button" parent="OptionsMenu/ButtonContainer"]
layout_mode = 2
theme = ExtResource("7_loib7")
text = "Cancel"

[node name="AcceptButton" type="Button" parent="OptionsMenu/ButtonContainer"]
layout_mode = 2
theme = ExtResource("7_loib7")
text = "Accept
"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="value_changed" from="OptionsMenu/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="OptionsMenu/ButtonContainer/CancelButton" to="." method="close_options_menu"]
[connection signal="pressed" from="OptionsMenu/ButtonContainer/AcceptButton" to="." method="close_options_menu"]
